# campaign-roi-optimization-engine

./: .gitignore  README.md  app.py  export_for_powerbi.py  pyproject.toml
configs/: config.yaml
notebooks/: 01_data_understanding.ipynb  research.ipynb
sql/: 01_feature_engineering.sql  02_customer_segments.sql  03_campaign_efficiency.sql  04_macro_signal_analysis.sql  05_profit_triage.sql  README.md
src/bank_roi/: config.py  train.py
src/bank_roi/data/: __init__.py  loader.py
src/bank_roi/evaluation/: __init__.py  metrics.py
src/bank_roi/explainability/: __init__.py  shap_analysis.py
src/bank_roi/models/: __init__.py  factory.py  tuner.py
src/bank_roi/optimization/: __init__.py
src/models/: factory.py  tuner.py
src/optimization/: profit.py
tests/: test_core.py
